--- a/ZaolisUI/UserInfo.xaml
+++ b/ZaolisUI/UserInfo.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:ZaolisUI"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="496" d:DesignWidth="325" BorderBrush="#FF03A9F4" BorderThickness="0" MinWidth="250" MaxWidth="325" >
+             d:DesignHeight="496" d:DesignWidth="325" BorderBrush="#FF03A9F4" BorderThickness="0" MinWidth="250">
     <DockPanel Background="Transparent">
         <!--Button close-->
         <Grid Background="Transparent">
@@ -23,7 +23,7 @@
             <Border Grid.ColumnSpan="3" Grid.RowSpan="3" Background="Gray" Opacity="0.3" MouseLeftButtonUp="Border_MouseLeftButtonUp"></Border>
             <DockPanel Grid.Column="1" Grid.Row="1" Background="White" >
                 <DockPanel Margin="10,0,10,0" DockPanel.Dock="Top" LastChildFill="False">
-                    <Label Margin="0,0,0,0" FontFamily="Segoe UI Symbol" FontSize="16" FontWeight="Bold">User Info</Label>
+                    <Label Margin="0,0,0,0" FontFamily="Myanmar Text" FontSize="16" FontWeight="Bold" Height="31">User Info</Label>
                     <Button Name="buttonClose" DockPanel.Dock="Right" Height="30" Width="30" Style="{StaticResource MaterialDesignIconButton}" Content="{materialDesign:PackIcon Kind=Close}" Click="buttonClose_Click" ></Button>
 
                 </DockPanel>
@@ -39,8 +39,10 @@
                         <!--Name-->
                         <DockPanel DockPanel.Dock="Top" LastChildFill="False">
                             <TextBlock Margin="10,10,0,0" DockPanel.Dock="Top">
-                        <Run Text="Name" FontSize="16"/></TextBlock>
-                            <TextBlock Margin="12,5,0,5" DockPanel.Dock="Top"> <Run Text="Last seen today at 13:03" FontSize="12" Foreground="#FF727272" ></Run>
+                        <Run Text="{Binding ContactMsgGetter.Name}" FontSize="16"/></TextBlock>
+                            <TextBlock Margin="12,5,0,5" DockPanel.Dock="Top"> 
+                                <Run Text="Last seen at " FontSize="12" Foreground="#FF727272" ></Run>
+                                <Run Text="{Binding ContactMsgGetter.LastActive}"></Run>
                             </TextBlock>
                         </DockPanel>
                     </DockPanel>
@@ -48,24 +50,26 @@
                     <Border DockPanel.Dock="Top" Height="10" Margin="0,10" Background="#C8E4F8"></Border>
                     <!--Bio-->
                     <DockPanel Margin="10,5,0,5" DockPanel.Dock="Top">
-                        <materialDesign:PackIcon Kind="InfoCircle" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25"/>
+                        <materialDesign:PackIcon Kind="InfoCircle" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25" VerticalAlignment="Center"/>
                         <TextBlock Margin="50,0,0,0" DockPanel.Dock="Top">
-                        <Run Text="Some bio here..." FontSize="14"></Run></TextBlock>
+                        <Run Text="{Binding ContactMsgGetter.Bio}" FontSize="14"></Run></TextBlock>
                         <TextBlock Margin="52,0,0,0" DockPanel.Dock="Top"> <Run Text="Bio" FontSize="12" Foreground="#FF727272" ></Run>
                         </TextBlock>
                     </DockPanel>
                     <!--Email-->
                     <DockPanel Margin="10,10,0,10" DockPanel.Dock="Top">
-                        <TextBlock Margin="75,0,0,0" DockPanel.Dock="Top">
-                        <Run Text="@ Email here..." FontSize="14"></Run></TextBlock>
-                        <TextBlock Margin="77,0,0,0" DockPanel.Dock="Top"> <Run Text="Email" FontSize="12" Foreground="#FF727272" ></Run>
+                        <materialDesign:PackIcon Kind="Email" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25" VerticalAlignment="Center"/>
+                        <TextBlock Margin="50,0,0,0" DockPanel.Dock="Top">
+                        <Run Text="{Binding ContactMsgGetter.Email}" FontSize="14"></Run></TextBlock>
+                        <TextBlock Margin="50,0,0,0" DockPanel.Dock="Top"> <Run Text="Email" FontSize="12" Foreground="#FF727272" ></Run>
                         </TextBlock>
                     </DockPanel>
                     <!--Username-->
                     <DockPanel Margin="10,10" DockPanel.Dock="Top">
-                        <TextBlock Margin="75,0,0,0" DockPanel.Dock="Top">
-                        <Run Text="@username here..." FontSize="14"></Run></TextBlock>
-                        <TextBlock Margin="77,0,0,0" DockPanel.Dock="Top"> <Run Text="Username" FontSize="12" Foreground="#FF727272" ></Run>
+                        <materialDesign:PackIcon Kind="User" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25" VerticalAlignment="Center"/>
+                        <TextBlock Margin="50,0,0,0" DockPanel.Dock="Top">
+                        <Run Text="{Binding ContactMsgGetter.Login}" FontSize="14"></Run></TextBlock>
+                        <TextBlock Margin="50,0,0,0" DockPanel.Dock="Top"> <Run Text="Username" FontSize="12" Foreground="#FF727272" ></Run>
                         </TextBlock>
                     </DockPanel>
                     <Separator Margin="0,10" DockPanel.Dock="Top"></Separator>
@@ -79,15 +83,13 @@
                     <!--Just a border-->
                     <Border DockPanel.Dock="Top" Height="10" Margin="0,10" Background="#C8E4F8"></Border>
                     <!---->
-                    <Button x:Name="buttonClearHistory" Margin="10,0" MinHeight="34" HorizontalContentAlignment="Left" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top" FontWeight="Normal" Foreground="Black">
-                        <Label FontWeight="Normal" Margin="55,0,0,0" Foreground="Black">Clear history</Label>
-                    </Button>
-                    <Button Name="buttonDeleteUser" Margin="10,0" MinHeight="34" HorizontalContentAlignment="Left" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top" FontWeight="Normal" Foreground="Black">
-                        <Label FontWeight="Normal" Margin="55,0,0,0" Foreground="Black">Delete user</Label>
-                    </Button>
-                    <Button Name="buttonBlockUser" Margin="10,0" MinHeight="34" HorizontalContentAlignment="Left" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top" Foreground="Red" FontWeight="Normal">
-                        <Label FontWeight="Normal" Margin="55,0,0,0" Foreground="Red">Block user</Label>
-                    </Button>
+                    <DockPanel Margin="10,0" MinHeight="34"  Height="20" DockPanel.Dock="Top">
+                        <materialDesign:PackIcon Kind="Delete" Width="24" Height="24" Foreground="#FF03A9F4"></materialDesign:PackIcon>
+                        <Button Name="buttonDeleteUser"  Style="{StaticResource MaterialDesignFlatButton}" HorizontalContentAlignment="Left"  FontWeight="Normal" Foreground="Black" Height="Auto" Margin="0,-10,0,0" Width="167" Click="buttonDeleteUser_Click">
+                            <Label FontWeight="Normal" Margin="30,0,0,0" Foreground="Black">Delete user</Label>
+                        </Button>
+                    </DockPanel>
+                    
                 </DockPanel>
             </DockPanel>
         </Grid>
