--- a/ZaolisUI/ChatWindow.xaml
+++ b/ZaolisUI/ChatWindow.xaml
@@ -26,10 +26,10 @@
                 <Button DockPanel.Dock="Right" Style="{StaticResource MaterialDesignIconButton}" Background="{x:Null}" Height="30" Width="30" Content="{materialDesign:PackIcon Kind=StickerOutline}" ></Button>
                 <TextBox x:Name="txtbox_message" FontSize="14" materialDesign:HintAssist.Hint="Write a message..." DockPanel.Dock="Left"></TextBox>
             </DockPanel>
-            <ItemsControl ItemsSource="{Binding Messages}">
+            <ItemsControl ItemsSource="{Binding Messages}" x:Name="messagesItemsControl">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <local:MessageCloud  />
+                        <local:MessageCloud/>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
