--- a/ZaolisUI/ChatWindow.xaml
+++ b/ZaolisUI/ChatWindow.xaml
@@ -26,13 +26,15 @@
                 <Button DockPanel.Dock="Right" Style="{StaticResource MaterialDesignIconButton}" Background="{x:Null}" Height="30" Width="30" Content="{materialDesign:PackIcon Kind=StickerOutline}" ></Button>
                 <TextBox x:Name="txtbox_message" FontSize="14" materialDesign:HintAssist.Hint="Write a message..." DockPanel.Dock="Left"></TextBox>
             </DockPanel>
-            <ItemsControl ItemsSource="{Binding Messages}" x:Name="messagesItemsControl">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <local:MessageCloud/>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
+            <ScrollViewer>
+                <ItemsControl ItemsSource="{Binding Messages}" x:Name="messagesItemsControl">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <local:MessageCloud/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
         </DockPanel>
     </Grid>
 </UserControl>
