--- a/ZaolisUI/ChatUI/GroupInfo.xaml
+++ b/ZaolisUI/ChatUI/GroupInfo.xaml
@@ -57,7 +57,7 @@
                     <Border DockPanel.Dock="Top" Height="10" Margin="0,10" Background="#C8E4F8"></Border>
                     <!--Members-->
                     <DockPanel DockPanel.Dock="Top" LastChildFill="False">
-                        <materialDesign:PackIcon Kind="AccountMultiple" Width="25" Height="25" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4"/>
+                        <materialDesign:PackIcon Kind="AccountMultiple" Width="25" Height="25" ToolTip="Information" Margin="10,0,0,0" DockPanel.Dock="Left" Foreground="#FF03A9F4"/>
                         <TextBlock Margin="50,5,0,5" DockPanel.Dock="Left">
                         <Run Text="Members" FontSize="14"></Run></TextBlock>
                         <Button Name="buttonAddMember" DockPanel.Dock="Right" Style="{StaticResource MaterialDesignIconButton}" Content="{materialDesign:PackIcon Kind=AccountAdd}" Height="30" Width="30"></Button>
@@ -67,12 +67,6 @@
                     </ListBox>
                     <Border DockPanel.Dock="Top" Height="10" Margin="0,10" Background="#C8E4F8"></Border>
                     <!--Buttons-->
-                    <Button x:Name="buttonClearHistory" Margin="10,0" MinHeight="34" HorizontalContentAlignment="Left" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top" FontWeight="Normal" Foreground="Black">
-                        <Label FontWeight="Normal" Margin="55,0,0,0" Foreground="Black">Clear history</Label>
-                    </Button>
-                    <Button Name="buttonDeleteUser" Margin="10,0" MinHeight="34" HorizontalContentAlignment="Left" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top" FontWeight="Normal" Foreground="Black">
-                        <Label FontWeight="Normal" Margin="55,0,0,0" Foreground="Black">Delete user</Label>
-                    </Button>
                     <Button Name="buttonBlockUser" Margin="10,0" MinHeight="34" HorizontalContentAlignment="Left" Style="{StaticResource MaterialDesignFlatButton}" DockPanel.Dock="Top" Foreground="Red" FontWeight="Normal">
                         <Label FontWeight="Normal" Margin="55,0,0,0" Foreground="Red">Leave group</Label>
                     </Button>
