--- a/ZaolisUI/ChatUI/ChatWindow.xaml
+++ b/ZaolisUI/ChatUI/ChatWindow.xaml
@@ -19,12 +19,12 @@
             </DockPanel>
             <DockPanel DockPanel.Dock="Bottom" LastChildFill="True" Margin="0,5">
                 <Button DockPanel.Dock="Left" Style="{StaticResource MaterialDesignIconButton}" Height="30" Width="30" Content="{materialDesign:PackIcon Kind=Attachment}" Click="Button_Click"></Button>
-                <Button DockPanel.Dock="Right" Style="{StaticResource MaterialDesignIconButton}" Height="30" Width="30" Content="{materialDesign:PackIcon Kind=Send}" Margin="9,2,9,0" VerticalAlignment="Top" Click="ButtonSend_Click" ></Button>
+                <Button x:Name="sendMessageButton" DockPanel.Dock="Right" Style="{StaticResource MaterialDesignIconButton}" Height="30" Width="30" Content="{materialDesign:PackIcon Kind=Send}" Margin="9,2,9,0" VerticalAlignment="Top" Click="ButtonSend_Click" ></Button>
                 <Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Foreground="#FF03A9F4" Width="30" Height="30" DockPanel.Dock="Right" BorderBrush="{x:Null}" Background="{x:Null}">
                     <materialDesign:PackIcon Kind="MicNone" Width="30" Height="25" />
                 </Button>
                 <Button DockPanel.Dock="Right" Style="{StaticResource MaterialDesignIconButton}" Background="{x:Null}" Height="30" Width="30" Content="{materialDesign:PackIcon Kind=StickerOutline}" ></Button>
-                <TextBox x:Name="txtbox_message" FontSize="14" materialDesign:HintAssist.Hint="Write a message..." DockPanel.Dock="Left"></TextBox>
+                <TextBox x:Name="txtbox_message" FontSize="14" materialDesign:HintAssist.Hint="Write a message..." DockPanel.Dock="Left" KeyDown="txtbox_message_KeyDown"></TextBox>
             </DockPanel>
             <ScrollViewer x:Name="ScrollViewer">
                 <ItemsControl ItemsSource="{Binding Messages}" x:Name="messagesItemsControl">
