--- a/ZaolisUI/User Info and Settings/Settings.xaml
+++ b/ZaolisUI/User Info and Settings/Settings.xaml
@@ -20,16 +20,16 @@
             </Grid.ColumnDefinitions>
             <Border Grid.ColumnSpan="3" Grid.RowSpan="3" Background="Gray" Opacity="0.3" MouseLeftButtonUp="Border_MouseLeftButtonUp"></Border>
             
-            <DockPanel Grid.Column="1" Grid.Row="1" Background="White" >
+            <DockPanel x:Name="mainDockPanel" Grid.Column="1" Grid.Row="1" Background="White" >
                 <!--Button close-->
                 <DockPanel Margin="10,0,10,0" DockPanel.Dock="Top" LastChildFill="False">
-                    <Label Margin="0,0,0,0" FontFamily="Segoe UI Symbol" FontSize="16" FontWeight="Bold">Settings</Label>
+                    <Label x:Name="labelSettings" Margin="0,0,0,0" FontFamily="Segoe UI Symbol" FontSize="16" FontWeight="Bold">Settings</Label>
                     <Button Name="buttonClose" DockPanel.Dock="Right" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Foreground="#FF2196F3" Width="30" Height="25" Background="{x:Null}" BorderBrush="{x:Null}" Content="{materialDesign:PackIcon Kind=Close, Size=25}" Click="buttonClose_Click" MouseEnter="buttonClose_MouseEnter" MouseLeave="buttonClose_MouseLeave" ></Button>
 
                 </DockPanel>
                 <DockPanel DockPanel.Dock="Bottom" LastChildFill="False">
                     <!--Photo&Name-->
-                    <DockPanel Background="#FFC8E4F8" LastChildFill="False" DockPanel.Dock="Top">
+                    <DockPanel x:Name="avatarDockPanel" Background="#FFC8E4F8" LastChildFill="False" DockPanel.Dock="Top">
                         <!--Photo-->
                         <Ellipse Height="70" DockPanel.Dock="Top" Width="70" Margin="1,15,1,10" Stroke="#FF03A9F4" StrokeThickness="1">
                             <Ellipse.Fill>
@@ -43,17 +43,17 @@
                     <!--Just a border-->
                     <!--Bio-->
                     <DockPanel Margin="10,20,10,10" DockPanel.Dock="Top">
-                        <materialDesign:PackIcon Kind="User" Margin="5" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25"/>
+                        <materialDesign:PackIcon x:Name="iconName" Kind="User" Margin="5" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25"/>
                         <TextBox x:Name="nameTextBox" HorizontalAlignment="Center" MinWidth="200" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Name" FontSize="18" LostFocus="NameTextBox_LostFocus" Text="{Binding CurrentUser.Name}"></TextBox>
                     </DockPanel>
                     <!--Username-->
                     <!--Just a border-->
-                    <Border DockPanel.Dock="Top" Height="10" Margin="0,10" Background="#C8E4F8"></Border>
+                    <Border x:Name="borderSplitter1" DockPanel.Dock="Top" Height="10" Margin="0,10" Background="#C8E4F8"></Border>
                     <!--Bio-->
                     <DockPanel Margin="10,5,0,5" DockPanel.Dock="Top">
                         <TextBox x:Name="bioTextBox" Margin="10,0" MaxLength="70" TextWrapping="Wrap" MaxWidth="293" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" MaxHeight="75" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Bio" FontSize="18" LostFocus="TextBox_LostFocus" Text="{Binding CurrentUser.Bio}"></TextBox>
-                        <Label Margin="10,0,0,0" DockPanel.Dock="Top" FontSize="10">Any details such as age, occupation or city.</Label>
-                        <Label Margin="10,0,0,0" DockPanel.Dock="Top" FontSize="10">Example: Test Automation Engineer, 19 y.o.</Label>
+                        <Label x:Name="labelExample1" Margin="10,0,0,0" DockPanel.Dock="Top" FontSize="10">Any details such as age, occupation or city.</Label>
+                        <Label x:Name="labelExample2" Margin="10,0,0,0" DockPanel.Dock="Top" FontSize="10">Example: Test Automation Engineer, 19 y.o.</Label>
                     </DockPanel>
                 </DockPanel>
             </DockPanel>
