--- a/ZaolisUI/User Info and Settings/UserInfo.xaml
+++ b/ZaolisUI/User Info and Settings/UserInfo.xaml
@@ -21,10 +21,10 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <Border Grid.ColumnSpan="3" Grid.RowSpan="3" Background="Gray" Opacity="0.3" MouseLeftButtonUp="Border_MouseLeftButtonUp"></Border>
-            <DockPanel Grid.Column="1" Grid.Row="1" Background="White" >
+            <DockPanel x:Name="mainDockPanel" Grid.Column="1" Grid.Row="1" Background="White" >
                 <DockPanel Margin="10,0,10,0" DockPanel.Dock="Top" LastChildFill="False">
-                    <Label Margin="0,0,0,0" FontFamily="Myanmar Text" FontSize="16" FontWeight="Bold" Height="31">User Info</Label>
-                    <Button Name="buttonClose" DockPanel.Dock="Right" Height="30" Width="30" Style="{StaticResource MaterialDesignIconButton}" Content="{materialDesign:PackIcon Kind=Close}" Click="buttonClose_Click" ></Button>
+                    <Label x:Name="labelUserInfo" Margin="0,0,0,0" FontFamily="Myanmar Text" FontSize="16" FontWeight="Bold" Height="31">User Info</Label>
+                    <Button Name="buttonClose" DockPanel.Dock="Right" Foreground="Gray" Height="30" Width="30" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Content="{materialDesign:PackIcon Kind=Close, Size=20}" Click="buttonClose_Click" ></Button>
 
                 </DockPanel>
                 <DockPanel DockPanel.Dock="Bottom" LastChildFill="False">
@@ -38,55 +38,55 @@
                         </Ellipse>
                         <!--Name-->
                         <DockPanel DockPanel.Dock="Top" LastChildFill="False">
-                            <TextBlock Margin="10,10,0,0" DockPanel.Dock="Top">
+                            <TextBlock x:Name="textBlockMainUserName" Margin="10,10,0,0" DockPanel.Dock="Top">
                         <Run Text="{Binding ContactMsgGetter.Name}" FontSize="16"/></TextBlock>
                             <TextBlock Margin="12,5,0,5" DockPanel.Dock="Top"> 
                                 <Run Text="Last seen at " FontSize="12" Foreground="#FF727272" ></Run>
-                                <Run Text="{Binding ContactMsgGetter.LastActive}"></Run>
+                                <Run Foreground="#FF727272" Text="{Binding ContactMsgGetter.LastActive}"></Run>
                             </TextBlock>
                         </DockPanel>
                     </DockPanel>
                     <!--Just a border-->
-                    <Border DockPanel.Dock="Top" Height="10" Margin="0,10" Background="#C8E4F8"></Border>
+                    <Border x:Name="border1" DockPanel.Dock="Top" Height="10" Margin="0,10" Background="#C8E4F8"></Border>
                     <!--Bio-->
                     <DockPanel Margin="10,5,0,5" DockPanel.Dock="Top">
-                        <materialDesign:PackIcon Kind="InfoCircle" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25" VerticalAlignment="Center"/>
-                        <TextBlock Margin="50,0,0,0" DockPanel.Dock="Top">
+                        <materialDesign:PackIcon x:Name="iconBio" Kind="InfoCircle" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25" VerticalAlignment="Center"/>
+                        <TextBlock x:Name="textBlockBio" Margin="30,0,0,0" DockPanel.Dock="Top">
                         <Run Text="{Binding ContactMsgGetter.Bio}" FontSize="14"></Run></TextBlock>
-                        <TextBlock Margin="52,0,0,0" DockPanel.Dock="Top"> <Run Text="Bio" FontSize="12" Foreground="#FF727272" ></Run>
+                        <TextBlock Margin="30,0,0,0" DockPanel.Dock="Top"> <Run Text="Bio" FontSize="12" Foreground="#FF727272" ></Run>
                         </TextBlock>
                     </DockPanel>
                     <!--Email-->
                     <DockPanel Margin="10,10,0,10" DockPanel.Dock="Top">
-                        <materialDesign:PackIcon Kind="Email" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25" VerticalAlignment="Center"/>
-                        <TextBlock Margin="50,0,0,0" DockPanel.Dock="Top">
+                        <materialDesign:PackIcon x:Name="iconEmail" Kind="Email" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25" VerticalAlignment="Center"/>
+                        <TextBlock x:Name="textBlockEmail" Margin="30,0,0,0" DockPanel.Dock="Top">
                         <Run Text="{Binding ContactMsgGetter.Email}" FontSize="14"></Run></TextBlock>
-                        <TextBlock Margin="50,0,0,0" DockPanel.Dock="Top"> <Run Text="Email" FontSize="12" Foreground="#FF727272" ></Run>
+                        <TextBlock Margin="30,0,0,0" DockPanel.Dock="Top"> <Run Text="Email" FontSize="12" Foreground="#FF727272" ></Run>
                         </TextBlock>
                     </DockPanel>
                     <!--Username-->
                     <DockPanel Margin="10,10" DockPanel.Dock="Top">
-                        <materialDesign:PackIcon Kind="User" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25" VerticalAlignment="Center"/>
-                        <TextBlock Margin="50,0,0,0" DockPanel.Dock="Top">
+                        <materialDesign:PackIcon x:Name="iconUsername" Kind="User" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25" VerticalAlignment="Center"/>
+                        <TextBlock x:Name="textBlockUsername" Margin="30,0,0,0" DockPanel.Dock="Top">
                         <Run Text="{Binding ContactMsgGetter.Login}" FontSize="14"></Run></TextBlock>
-                        <TextBlock Margin="50,0,0,0" DockPanel.Dock="Top"> <Run Text="Username" FontSize="12" Foreground="#FF727272" ></Run>
+                        <TextBlock Margin="30,0,0,0" DockPanel.Dock="Top"> <Run Text="Username" FontSize="12" Foreground="#FF727272" ></Run>
                         </TextBlock>
                     </DockPanel>
                     <Separator Margin="0,10" DockPanel.Dock="Top"></Separator>
                     <!--Notification-->
                     <DockPanel Margin="10,5" DockPanel.Dock="Top">
-                        <materialDesign:PackIcon Kind="Notifications" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25"/>
+                        <materialDesign:PackIcon x:Name="iconNotification" Kind="Notifications" ToolTip="Information" DockPanel.Dock="Left" Foreground="#FF03A9F4" Width="25" Height="25"/>
                         <ToggleButton DockPanel.Dock="Right" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="MaterialDesignSwitchToggleButton" IsChecked="True" />
-                        <TextBlock Margin="50,5,0,5" DockPanel.Dock="Right">
+                        <TextBlock x:Name="textBlockNotification" Margin="30,5,0,5" DockPanel.Dock="Right">
                         <Run Text="Notifications" FontSize="14"></Run></TextBlock>
                     </DockPanel>
                     <!--Just a border-->
-                    <Border DockPanel.Dock="Top" Height="10" Margin="0,10" Background="#C8E4F8"></Border>
+                    <Border x:Name="border2" DockPanel.Dock="Top" Height="10" Margin="0,10,0,5" Background="#C8E4F8"></Border>
                     <!---->
                     <DockPanel Margin="10,0" MinHeight="34"  Height="20" DockPanel.Dock="Top">
-                        <materialDesign:PackIcon Kind="Delete" Width="24" Height="24" Foreground="#FF03A9F4"></materialDesign:PackIcon>
-                        <Button Name="buttonDeleteUser"  Style="{StaticResource MaterialDesignFlatButton}" HorizontalContentAlignment="Left"  FontWeight="Normal" Foreground="Black" Height="Auto" Margin="0,-10,0,0" Width="167" Click="buttonDeleteUser_Click">
-                            <Label FontWeight="Normal" Margin="30,0,0,0" Foreground="Black">Delete user</Label>
+                        <materialDesign:PackIcon x:Name="iconDelete" Margin="0,6,0,0" Kind="Delete" Width="24" Height="24" Foreground="#FF03A9F4"></materialDesign:PackIcon>
+                        <Button Name="buttonDeleteUser"  Style="{StaticResource MaterialDesignFlatButton}" HorizontalContentAlignment="Left"  FontWeight="Normal" Foreground="Black" Height="Auto" Margin="0,0,0,2" Width="167" Click="buttonDeleteUser_Click">
+                            <Label FontWeight="Normal" Margin="11,0,0,0" Foreground="Red">Delete user</Label>
                         </Button>
                     </DockPanel>
                     
