--- a/ZaolisUI/User Info and Settings/Settings.xaml
+++ b/ZaolisUI/User Info and Settings/Settings.xaml
@@ -36,7 +36,7 @@
                                 <ImageBrush ImageSource="{Binding CurrentAvatar}" Stretch="Fill"></ImageBrush>
                             </Ellipse.Fill>
                         </Ellipse>
-                        <Button x:Name="buttonSetProfilePhoto" materialDesign:ButtonAssist.CornerRadius="15" Width="150" Margin="0,0,0,20" Foreground="White" DockPanel.Dock="Bottom">
+                        <Button x:Name="buttonSetProfilePhoto" materialDesign:ButtonAssist.CornerRadius="15" Width="150" Margin="0,0,0,20" Foreground="White" DockPanel.Dock="Bottom" Click="buttonSetProfilePhoto_Click">
                             Set Profile Photo
                         </Button>
                     </DockPanel>
